--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="carousel-item">
-                <img src="{% static 'images/main_3.jpeg' %}" class="d-block w-100 hero-img" alt="Coorg">
+                <img src="{% static 'images/hero 1.jpg' %}" class="d-block w-100 hero-img" alt="Coorg">
             </div>
 
         </div>
